@@ -161,6 +161,7 @@ t/06190_Dialog_Scan_Sane.t
 t/06191_Dialog_Scan_Sane.t
 t/06192_Dialog_Scan_Sane.t
 t/06193_Dialog_Scan_Sane.t
+t/06194_Dialog_Scan_Sane.t
 t/0621_Dialog_Scan_CLI.t
 t/0622_Dialog_Scan_CLI.t
 t/0623_Dialog_Scan_CLI.t
